<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configure_screen_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <EditText
        android:id="@+id/file_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/file_dir_name_label"
        android:inputType="textMultiLine" />
        
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_label" 
            android:onClick="saveUserConfiguration"/>
        <Button
            android:id="@+id/browse_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/browse_label" 
            android:onClick="browseFileDirectories"/>
    </LinearLayout>
    
    <TextView
        android:id="@+id/instructions_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/configure_screen_instructions"
        android:textAppearance="?android:attr/textAppearanceSmall" /> 
    <EditText
        android:id="@+id/log_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/configure_screen_log"
        android:textAppearance="?android:attr/textAppearanceSmall" 
        android:editable="false" />   

</LinearLayout>
